More lint optimizations:
 * Added xhdpi icon
 * Fixed proguard.cfg
 * Small performance fix by using Integer.valueOf instead of new Integer